terminado tabla followers, pero con seguridad activa en todo
